// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlSide renders accurately with and without props and children 1`] = `
<div
  className="controlSide controlRight"
/>
`;

exports[`ControlSide renders accurately with and without props and children 2`] = `
<div
  className="controlSide controlRight test"
/>
`;

exports[`ControlSide renders accurately with and without props and children 3`] = `
<div
  className="controlSide controlRight"
>
  Test
</div>
`;
